[package]
name = "rust-share-m-api"
version = "0.1.0"
authors = ["tushar <tushar@theprocedure.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.1"

actix-web = "3.2.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-service = "1.0.6"
actix-rt = "1.1.1"
reqwest = "0.10.8"

diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
chrono = { version = "0.4.10", features = ["serde"] }
r2d2 = "0.8.9"

dotenv = "0.15.0"
futures = "0.3.7"
derive_more = "0.99.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
alcoholic_jwt = "1.0.0"
